<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_fragment_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/title_fragment_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/FragmentTitle"/>

    <ImageView
        android:id="@+id/check_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_check_banner" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?attr/colorSecondary"
        android:insetLeft="10dp"
        android:minWidth="240dp"
        android:minHeight="70dp"
        android:text="@string/check_button"
        android:textAppearance="@style/EmphasisText"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/check_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_fragment_check">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/check_container_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="-20dp"
                app:layout_constraintBottom_toBottomOf="@+id/check_body_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_white_rounded" />

            <ImageView
                android:id="@+id/checkmark_1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/check_container_1"
                app:layout_constraintTop_toTopOf="@+id/check_container_1"
                app:srcCompat="@drawable/_checkmark" />

            <TextView
                android:id="@+id/check_title_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/check_title_1"
                android:textAppearance="@style/NormalText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/check_container_1"
                app:layout_constraintStart_toEndOf="@+id/checkmark_1"
                app:layout_constraintTop_toTopOf="@+id/checkmark_1" />

            <TextView
                android:id="@+id/check_body_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/check_body_1"
                android:textAppearance="@style/ThinText"
                app:layout_constraintEnd_toEndOf="@+id/check_container_1"
                app:layout_constraintStart_toStartOf="@+id/check_title_1"
                app:layout_constraintTop_toBottomOf="@+id/check_title_1" />

            <ImageView
                android:id="@+id/check_container_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="-20dp"
                app:layout_constraintBottom_toBottomOf="@+id/check_body_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check_container_1"
                app:srcCompat="@drawable/bg_white_rounded" />

            <ImageView
                android:id="@+id/checkmark_2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/check_container_2"
                app:layout_constraintTop_toTopOf="@+id/check_container_2"
                app:srcCompat="@drawable/_checkmark" />

            <TextView
                android:id="@+id/check_title_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/check_title_2"
                android:textAppearance="@style/NormalText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/check_container_2"
                app:layout_constraintStart_toEndOf="@+id/checkmark_2"
                app:layout_constraintTop_toTopOf="@+id/checkmark_2" />

            <TextView
                android:id="@+id/check_body_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/check_body_2"
                android:textAppearance="@style/ThinText"
                app:layout_constraintEnd_toEndOf="@+id/check_container_2"
                app:layout_constraintStart_toStartOf="@+id/check_title_2"
                app:layout_constraintTop_toBottomOf="@+id/check_title_2" />

            <TextView
                android:id="@+id/check_body_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/check_body_3"
                android:textAppearance="@style/ThinText"
                app:layout_constraintEnd_toEndOf="@+id/check_container_2"
                app:layout_constraintStart_toStartOf="@+id/check_body_2"
                app:layout_constraintTop_toBottomOf="@+id/check_body_2" />

            <TextView
                android:id="@+id/bullet_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/bullet_point"
                android:textAppearance="@style/ThinText"
                app:layout_constraintEnd_toStartOf="@+id/check_body_2"
                app:layout_constraintTop_toTopOf="@+id/check_body_2" />

            <TextView
                android:id="@+id/bullet_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/bullet_point"
                android:textAppearance="@style/ThinText"
                app:layout_constraintEnd_toStartOf="@+id/check_body_3"
                app:layout_constraintTop_toTopOf="@+id/check_body_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>