<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/title_fragment_list"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_fragment_list"
        android:textAppearance="@style/FragmentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name_header" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="170dp"
        android:background="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_fragment_list" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/filtered_material_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/NormalText"
        app:layout_constraintStart_toStartOf="@+id/item_type_header"
        app:layout_constraintTop_toTopOf="@+id/item_type_header" />

    <TextView
        android:id="@+id/item_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/item_name_header"
        android:textAppearance="@style/BoldText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_fragment_list" />

    <TextView
        android:id="@+id/item_type_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:text="@string/item_type_header"
        android:textAppearance="@style/BoldText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_name_header" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="19dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toEndOf="@+id/item_name_header"
        app:layout_constraintTop_toTopOf="@+id/item_name_header"
        app:srcCompat="@drawable/ic_baseline_sort_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/item_type_header"
        app:layout_constraintTop_toTopOf="@+id/item_type_header"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />

</androidx.constraintlayout.widget.ConstraintLayout>